RESOLVED FIXED233879
[GStreamer] test fast/mediastream/get-display-media-settings.html fails
https://bugs.webkit.org/show_bug.cgi?id=233879
Summary [GStreamer] test fast/mediastream/get-display-media-settings.html fails
Arcady Goldmints-Orlov
Reported 2021-12-06 09:48:59 PST
The test fast/mediastream/get-display-media-settings.html has failed on GTK and WPE since its addition in r286491, because typeof settings.deviceId is "undefined". This is likely because the change in question added support for deviceId for the Cocoa and Mock platforms but not for GStreamer.
Attachments
Patch (7.60 KB, patch)
2021-12-22 06:30 PST, Philippe Normand
no flags
Philippe Normand
Comment 1 2021-12-22 06:30:46 PST
EWS
Comment 2 2021-12-23 00:47:26 PST
Committed r287386 (245526@main): <https://commits.webkit.org/245526@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 447800 [details].
Radar WebKit Bug Importer
Comment 3 2021-12-23 00:48:20 PST
Note You need to log in before you can comment on or make changes to this bug.