[GStreamer] test fast/mediastream/get-display-media-settings.html fails https://bugs.webkit.org/show_bug.cgi?id=233879

Patch by Philippe Normand <pnormand@igalia.com> on 2021-12-23
Reviewed by Youenn Fablet.

Source/WebCore:

Pass down hashSalt to GStreamer display mock capture source and
advertise its deviceId as supported constraint.

* platform/mediastream/gstreamer/MockRealtimeVideoSourceGStreamer.cpp:
(WebCore::MockDisplayCaptureSourceGStreamer::create):
(WebCore::MockDisplayCaptureSourceGStreamer::MockDisplayCaptureSourceGStreamer):
(WebCore::MockDisplayCaptureSourceGStreamer::settings):
* platform/mediastream/gstreamer/MockRealtimeVideoSourceGStreamer.h:
* platform/mock/MockRealtimeMediaSourceCenter.cpp:

LayoutTests:

* platform/glib/TestExpectations:


Canonical link: https://commits.webkit.org/245526@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287386 268f45cc-cd09-0410-ab3c-d52691b4dbfc